--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.meal'
+    namespace 'com.amzsoft.aumeal'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.meal"
+        applicationId "com.amzsoft.aumeal"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -45,8 +45,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-
-
-
 
 }
