--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.meal">
+    package="com.amzsoft.aumeal">
 
     <application
         android:allowBackup="true"
@@ -14,10 +14,10 @@
         android:theme="@style/Theme.Meal"
         tools:targetApi="31" >
         <activity
-            android:name=".activity.HomeActivity"
+            android:name="com.amzsoft.aumeal.activity.HomeActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.MainActivity"
+            android:name="com.amzsoft.aumeal.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
